hphp/hack/test/typecheck/lambda/lambda_bad_arity.php.like_types.exp
File "lambda_bad_arity.php", line 14, characters 12-130:
Invalid return type (Typing[4110])
File "lambda_bad_arity.php", line 5, characters 36-42:
Some type constraint(s) are violated here
File "lambda_bad_arity.php", line 5, characters 36-42:
Treturn is a constrained type parameter
File "lambda_bad_arity.php", line 13, characters 39-44:
Expected string
File "lambda_bad_arity.php", line 5, characters 36-42:
But got dynamic
File "lambda_bad_arity.php", line 15, characters 7-65:
Invalid argument (Typing[4110])
File "lambda_bad_arity.php", line 6, characters 5-32:
Expected ~(function([unresolved], [unresolved]): ?[unresolved]) because it is an unenforceable type
File "lambda_bad_arity.php", line 15, characters 7-65:
But got (function(int $x): string)
